# humoto-controller-pepper

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  qiproject.xml
cmake/: humoto.cmake  pepper_controller.cmake  pepper_controller_config.cmake.in
config/: mpc-mp-8.yaml  mpc-mp-circle-fast.yaml  mpc-mp-circle-medium.yaml  mpc-mp-circle-slow.yaml  mpc-mp-circular-backward-medium.yaml  mpc-mp-circular-forward-fast.yaml  mpc-mp-circular-forward-medium.yaml  mpc-mp-circular-forward-very-fast.yaml  mpc-mp-idle.yaml  mpc-mp-move-straight-fast.yaml  mpc-mp-move-straight-medium.yaml  mpc-mp-move-straight-very-fast.yaml  mpc-mp-rotate-in-place-fast.yaml  mpc-mp-rotate-in-place-medium.yaml  mpc-mp-stop.yaml  pepper-controller-config-vs-basemotion.yaml  pepper-controller-config-vs-velocity.yaml  pepper-controller-config-vs.yaml  pepper-controller-config.yaml  pepper-controller-parameters.yaml
controller/: CMakeLists.txt  main.cpp  mpc_control.h  pepper_controller.cpp  pepper_controller.h  pepper_controller_includes.h  pepper_controller_logger.h  pepper_controller_parameters.h  qiproject.xml  whole_body_control.h
doc/: content.tex  documentation.tex  title.tex
python/: go_and_log.py  move.py
